# munitquest-algorithm-submission

./: .gitignore  README.md  pytest.ini  update_scoring.sh
bundle/: competition.yaml
bundle/pages/: data.md  evaluation.md  overview.md  participate.md  submission.md  terms.md
bundle/scoring/: execute.sh  main.py  metadata  pyproject.toml
bundle/scoring/dynamic/: scoring.py
bundle/scoring/isometric/: metadata  scoring.py
bundle/scoring/src/algorithm_scoring/: report.py  score_assembler.py  score_recording.py  scorer.py
tests/: test_eventfile_validation.py  test_validate_prediction_log.py  tests.py
tests/testdata/: example_prediction.tsv  example_reference.tsv
tests/testdata/eventfiles/: invalid.tsv  invalid_description.tsv  invalid_duration_entry.tsv  invalid_missing_col.tsv  invalid_mixed.tsv  invalid_onset_entry.tsv  invalid_onset_type.tsv  invalid_sample_entry.tsv  invalid_sample_type.tsv  invalid_unitid_entry.tsv  invalid_unitid_type.tsv  valid.tsv
tests/testdata/prediction_logs/: invalid_duration_log.json  invalid_env_log.json  invalid_generatedby_log.json  invalid_missing_key_log.json  invalid_multi_log.json  missing_log_events.tsv  valid_events.tsv  valid_log.json
